# StellarisGfx

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
app/: Demo.cpp  Demo.h  IMG_TEST.h
app/ball/: ball.h  ball.sprite
app/text/: font.font  lgfont.font  tinyfont.font
config/: config_pc.h  pc.h
src/interface/: App.h  Bootstrap.h  Drawer.h
src/pc/: PC.cpp  PC.h
src/sdl/: SdlDraw.cpp  SdlDraw.h  lang.h
src/sdl/init/: init.cpp  init.h
src/struct/: Color.h  Sprite.h  Typeface.h
src/structs/: Sprite.h
util/: BitstreamToFont.cpp  BitstreamToFont.h  PngToSprite.cpp
